name:                hs-scenario
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hs-scenario#readme
license:             BSD3
license-file:        LICENSE
author:              Bart Frenk
maintainer:          bart.frenk@gmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       Scenario.Process
                       Scenario.Terms
                       Scenario.Utils
  exposed-modules:     Scenario
                       Shared.Types
  build-depends:       base >= 4.7 && < 5
                     , basic-prelude
                     , binary
                     , clock
                     , containers
                     , distributed-process
                     , distributed-process-lifted
                     , distributed-process-monad-control
                     , distributed-process-simplelocalnet
                     , distributed-static
                     , free
                     , lens
                     , monad-control
                     , mtl
                     , network
                     , network-transport-tcp
                     , network-transport
                     , exceptions
                     , uuid
  default-language:    Haskell2010

executable hs-scenario-sql
  hs-source-dirs:      app
  main-is:             SQL.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , basic-prelude
                     , binary
                     , hs-scenario
                     , HDBC
                     , HDBC-postgresql
                     , microtimer
  default-language:    Haskell2010

test-suite hs-scenario-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-scenario
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hs-scenario
